22-rabbitmq-k8s-topology-operator/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nfs
---
apiVersion: v1
kind: Namespace
metadata:
  name: rabbitmq
