22-rabbitmq-k8s-topology-operator/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq
  namespace: rabbitmq
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: rabbitmq.kub
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: xavki-rabbitmq
            port:
              number: 15672
